# pysatl-cpd

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  create_dev_venv.sh  create_user_venv.sh  example.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yaml  linux_installation.yaml  windows_installation.yaml
CPDShell/: labeled_data.py  main.py  shell.py
CPDShell/Core/: cpd_core.py  data_controller.py  scrubber_scenario.py  scrubberscenario.py
CPDShell/generator/: distributions.py  generator.py
benchmarking/: logger.py
benchmarking/pipeline/: pipeline.py
benchmarking/steps/: step.py  step_processor.py
docs/: Guide CPD Benchmark.md
examples/: classification_based_cpd.ipynb  knn_based_cpd.ipynb
examples/configs/: test_config_exp.yml
new_pysatl_cpd/: custom_types.py  logger.py  types.py
new_pysatl_cpd/pipeline/: pipeline.py
new_pysatl_cpd/steps/: step.py  step_processor.py
pysatl_cpd/: __init__.py  cpd_solver.py  icpd_solver.py  labeled_data.py  main.py  online_cpd_solver.py  shell.py
pysatl_cpd/analysis/: __init__.py  results_analyzer.py
pysatl_cpd/core/: __init__.py  cpd_core.py  online_cpd_core.py  problem.py  scrubber_scenario.py
pysatl_cpd/generator/: __init__.py  changepoint_process.py  config_parser.py  dataset_description.py  distributions.py  generator.py  saver.py
scripts/: install_dev_linux.sh  install_dev_windows.ps1  install_user_linux.sh  install_user_windows.ps1
tests/: test_labeled_data.py  test_online_solver.py  test_shell.py  test_solver.py
(+233 files in other folders)
