[tool.poetry]
name = "pysatl_cpd"
version = "0.1.0"
description = "Batch module for changepoint detection"
authors = [
    "Temerlan Akhmetov <Temerlan.axmetov.75@mail.ru>",
    "Alexey Tatyanenko <alexdtat@gmail.com>",
    "Artemii Patov <patov.988@gmail.com>",
    "Vladimir Kutuev <vladimir.kutuev@gmail.com>",
    "Aleksei Ivanov <AXSoran47@yandex.ru>",
    "Romanyuk Artem <wrdxwrdxwrdx@gmail.com>",
    "Aleksandra Listkova <rsobaken@yandex.ru>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PySATL/pysatl-cpd"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.2"
PyQt5 = "^5.15.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.9.6"
pre-commit = "^3.7.1"
pyyaml = "^6.0.1"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
hypothesis = "^6.122.1"


[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
